oxiplate-derive/tests/broken/derive/non-string-literal.stderr
error: expected string literal
 --> tests/broken/derive/non-string-literal.rs:4:19
  |
4 | #[oxiplate_inline(19)]
  |                   ^^

error: Incorrect syntax for external template. Should look something like:
       #[oxiplate = "/path/to/template/from/templates/directory.txt.oxip"]
 --> tests/broken/derive/non-string-literal.rs:8:1
  |
8 | #[oxiplate = 19]
  | ^^^^^^^^^^^^^^^^

error[E0277]: `Inline` doesn't implement `std::fmt::Display`
  --> tests/broken/derive/non-string-literal.rs:12:18
   |
12 |     print!("{}", Inline);
   |             --   ^^^^^^ `Inline` cannot be formatted with the default formatter
   |             |
   |             required by this formatting parameter
   |
   = help: the trait `std::fmt::Display` is not implemented for `Inline`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `print` (in Nightly builds, run with -Z macro-backtrace for more info)
